# nuru

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  python-tests.yml
adminpanel/: actions.py  auth.py  fields.py  migrations.py  panel.py  resource.py
adminpanel/integrations/: sqlmodel.py
adminpanel/templates/: dashboard.html  detail.html  layout.html  login.html
docs/: components.md  radio_buttons.md
example_app/: auth.py  db.py  main.py  pa_app.py  pa_wsgi.py  seed.py
example_app/models/: __init__.py  author.py  book.py  checkout.py  member.py  staff_user.py  subject.py
example_app/pages/: __init__.py  reports_page.py
example_app/resources/: __init__.py  author_resource.py  book_resource.py  checkout_resource.py  member_resource.py  role_resource.py  staff_user_resource.py  subject_resource.py
nuru/: __init__.py  actions.py  auth.py  columns.py  field_builder.py  fields.py  icons.py  migrations.py  page.py  palette.py  panel.py  resource.py  roles.py
nuru/actions/: __init__.py  base.py
nuru/columns/: __init__.py  badge.py  base.py  boolean.py  currency.py  datetime.py  image.py  text.py
nuru/components/: __init__.py  types.py
nuru/forms/: __init__.py  base.py  checkbox.py  checkbox_group.py  date.py  datepicker.py  email.py  (+16 more)
tests/: test_auth_roles.py  test_field_convenience.py  test_field_make.py  test_fields_fluent.py  test_file_upload.py  test_flowbite_integration.py  test_palette.py  test_picker_fields.py  test_section_fluent.py  test_select_callable.py  test_smoke.py
(+120 files in other folders)
